--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BAD30106-0FAE-4FA5-B651-F8D6435CE145}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>URAL</RootNamespace>
     <AssemblyName>URAL</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
@@ -80,6 +80,7 @@
     <Compile Include="1031_RailwayTickets.cs" />
     <Compile Include="1032_FindAMultiple.cs" />
     <Compile Include="1033._Labyrinth.cs" />
+    <Compile Include="1034_QueensInPeacefulPositions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="1004_SightseeingTrip.cs" />
